fetched data from mongodb

--- a/views/history.handlebars
+++ b/views/history.handlebars
@@ -59,11 +59,18 @@
 }
 
     .button3 {border-radius: 8px;}
+
+    
+body {
+  background: -webkit-linear-gradient(left, #FFF 20px, transparent 1%) center, -webkit-linear-gradient(#FFF 20px, transparent 1%) center, rgb(88, 88, 88);
+  background: linear-gradient(90deg, #FFF 20px, transparent 1%) center, linear-gradient(#FFF 20px, transparent 1%) center, rgb(88, 88, 88);
+  background-size: 22px 22px;
+}
 </style>
 <title>History</title>
 <div class="container align-center">
     
-    <div class="row justify-content-center">
+    <div class="row justify-content-center "style="background-color: #FFF;">
         <h1>Movie Recommendation history</h1>
     </div>
     <div class="vertical-center-row">
